# haven

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  Caddyfile  Caddyfile.http  Caddyfile.http80  Dockerfile  Justfile  Justfile.backup  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.override.yml.example  docker-compose.proxy.yml  docker-compose.yml  generate-diffs.sh  haven-cli  justfile.common  justfile.database  justfile.demos  justfile.demos.standalone  justfile.docker  justfile.old  mkdocs.yml  nginx.conf  pyproject.toml  pyrightconfig.json  remove-port-forwarding.sh  setup-port-forwarding.sh  start-proxy-80.sh  test-complete-setup.sh  test-domains.sh  todo.md  work-log.md
.claude/: context.md  settings.json  settings.json:
.github/workflows/: ci.yml  migration-example.yml
.just/: common.just  help.sh  test-commands.sh
alembic/: env.py
apps/api/: .coveragerc  Dockerfile  README.md  justfile  pyproject.toml  pyrightconfig.json  pytest.ini  test_diff_json.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250116_initial_schema.py  20250716_1903_create_users_table.py  20250716_1906_create_repositories_table.py  20250716_1956_add_ttr_system_tables_tasks_comments_.py  20250716_2014_add_ttr_roadmap_milestone_and_todo_.py  20250716_2040_add_commit_and_commit_review_tables.py  20250717_0051_add_review_comments_table.py  20250717_0204_add_diff_html_to_commits.py  20250717_1441_add_repository_hash_and_remote_url.py  20250717_1535_add_slug_to_repositories.py
apps/api/conf/: config.yaml  defaults.yaml
apps/api/conf/database/: postgres.yaml
apps/api/conf/environment/: local.yaml  prod.yaml
apps/api/conf/logging/: default.yaml
apps/api/scripts/: add-haven-repository.py  bootstrap-haven-commits.py  cleanup-duplicate-repositories.py  create-migration.sh  debug-config.py  demo-diff-generation.py  fix-repository-paths-docker.py  import-real-commits.py  migrate-docker.sh  seed-commits.py  set-haven-slug.py  test-records-api.py  update-repository-hashes.py  update-repository-slugs.py  version-bump.sh
apps/api/src/haven/: __init__.py  cli.py  main.py
apps/api/src/haven/application/dtos/: __init__.py  record_dtos.py  task_dtos.py
apps/api/src/haven/application/services/: __init__.py  commit_service.py  diff_html_service.py  record_service.py  repository_service.py  review_service.py  task_service.py  user_service.py
apps/api/src/haven/config/: __init__.py  settings.py
apps/api/src/haven/demo/: __init__.py  ttr_demo.py
apps/api/src/haven/domain/: exceptions.py  unit_of_work.py
apps/api/src/haven/domain/entities/: __init__.py  comment.py  commit.py  milestone.py  record.py  repository.py  review_comment.py  roadmap.py  task.py  time_log.py  todo.py  user.py
apps/api/src/haven/domain/repositories/: __init__.py  comment_repository.py  commit_repository.py  record_repository.py  repository_repository.py  review_repository.py  task_repository.py  time_log_repository.py  user_repository.py
apps/api/src/haven/infrastructure/: __init__.py
apps/api/src/haven/infrastructure/database/: dependencies.py  factory.py  models.py  session.py  unit_of_work.py
apps/api/src/haven/infrastructure/database/repositories/: __init__.py  comment_repository.py  commit_repository.py  record_repository.py  repository_repository.py  review_repository.py  task_repository.py  time_log_repository.py  user_repository.py
apps/api/src/haven/infrastructure/git/: git_client.py
apps/api/src/haven/interface/: __init__.py
apps/api/src/haven/interface/api/: __init__.py  app.py  commit_routes.py  diff_routes.py  repository_management_routes.py  repository_routes.py  routes.py  ttr_routes.py
apps/api/src/haven/interface/api/schemas/: commit_schemas.py
apps/api/src/haven/interface/graphql/: __init__.py  schema.py
apps/api/tests/: __init__.py  conftest.py  fixtures.py  test_main.py  test_main_integration.py
apps/api/tests/e2e/: __init__.py  test_full_flow.py
apps/api/tests/integration/: __init__.py  test_api.py  test_graphql.py  test_repository_integration.py
apps/api/tests/unit/: __init__.py
apps/api/tests/unit/application/: test_commit_service.py  test_record_service.py  test_repository_service.py  test_user_service.py
apps/api/tests/unit/domain/: test_commit.py  test_record.py  test_repository.py  test_review_comment.py  test_user.py
apps/api/tests/unit/infrastructure/: __init__.py  test_commit_repository.py  test_models.py  test_repository.py  test_repository_repository.py  test_review_repository.py  test_unit_of_work.py  test_user_repository.py
apps/web/: .eslintrc.cjs  .gitignore  README.md  index.html  justfile  package.json  tsconfig.json  vite.config.ts
conf/: defaults.yaml
conf/database/: postgres.yaml  sqlite.yaml
conf/environment/: test.yaml
docs/: alembic.md  changelog.md  cli.md  commits-plan.md  contributing.md  definition-of-done.md  docker.md  documentation-audit-report-after-fixes.md  documentation-audit-report.md  documentation-fix-plan.md  index.md  monitoring.md  overview.md  port-architecture.md  proxy-troubleshooting.md  quality.md  quickstart.md  roadmap.md  tasks-workflow.md
docs/api/: diff-generation.md  graphql.md  index.md  openapi.md  rest.md
docs/architecture/: README.md  architecture.md  domain-glossary.md
docs/development/: README.md  alembic.md  configuration.md  cors-and-domains.md  demo-commands.md  https-setup.md  justfile-architecture.md  local-domains.md  local-setup.md  migration-strategies.md  quality.md  refactoring.md  scalable-justfile.md  testing.md  ttr-demo.md
docs/operations/: README.md  container-troubleshooting.md  deployment.md  docker.md  (+2 more)
scripts/: build-docker.sh  debug-config.py  demo-diff-generation.py  demo-https.sh  demo-sync-workflow.sh  diff-api-example.sh  generate-self-signed-cert.sh  run-simple.sh  scan-docs.py  setup-hosts.sh  setup-https.sh  setup-local-domains.sh  start-dev.sh  stop-all.sh  sync-frontend-backend.sh
tests/: __init__.py  conftest.py  fixtures.py
tools/: database.just  demos.just  docker.just  testing.just
(+113 files in other folders)
